syntax = "proto3";

import "common.proto";

package com.spectrum.workfolio.proto;

option java_multiple_files = true;
option java_package = "com.spectrum.workfolio.proto.staff";
option java_outer_classname = "StaffProto";

message StaffListResponse {
  repeated Staff staffs = 1;
}

message StaffGetResponse {
  Staff staff = 1;
}

message StaffCreateRequest {
  string username = 1;
  string password = 2;
  string name = 3;
  string email = 4;
  optional string phone = 5;
}

message StaffUpdateRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  optional string phone = 4;
  optional bool is_active = 5;
}

message StaffChangePasswordRequest {
  string id = 1;
  string old_password = 2;
  string new_password = 3;
}

message StaffLoginRequest {
  string username = 1;
  string password = 2;
}

message StaffLoginResponse {
  Staff staff = 1;
  string access_token = 2;
  string refresh_token = 3;
}

